fix font color in dark mode

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -111,6 +111,7 @@ form {
 }
 
 form input[type="text"] {
+    color: #444;
     flex: 1;
     font-size: 14px;
     border: none;
@@ -196,7 +197,6 @@ form button {
     }
 
     input, button {
-        color: #e0e0e0;
         border-color: #444;
     }
 }
